Fixed styling on the splash page with spacing adjustments

--- a/app/assets/stylesheets/mainpage.scss
+++ b/app/assets/stylesheets/mainpage.scss
@@ -66,7 +66,7 @@
   // border: 1px solid red;
   margin-left: 50px;
   /* margin-right: 0px; */
-  margin-top: 50px;
+  margin-top: 20px;
   margin-bottom: 50px;
 }
 
@@ -80,7 +80,7 @@
   width: 500px;
   height: 370px;
   border: 1px solid green;
-  margin: 50px;
+  margin: 20px;
   flex-direction: column;
 }
 
