--- a/app/assets/stylesheets/navbar/navbar.scss
+++ b/app/assets/stylesheets/navbar/navbar.scss
@@ -17,6 +17,7 @@
   border-bottom: 1px solid lightgrey;
   border-top: 1px solid lightgrey;
   letter-spacing: 1px;
+  font-weight: 200;
 }
 .nav-list li {
   display: flex;
